--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- header -->
-    <?php include 'includes/header.php';?>
+    <?php include 'includes/header.html';?>
     
     <!-- fOOD sEARCH Section Starts Here -->
     <section class="food-search text-center">
@@ -87,7 +87,7 @@
     <?php include 'includes/menu.php';?>
 
     <!-- footer Section Starts Here -->
-    <?php include 'includes/footer.php';?>
+    <?php include 'includes/footer.html';?>
 
 </body>
 </html>
