--- a/index.html
+++ b/index.html
@@ -11,9 +11,24 @@
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-</body>
 
 
+ <style>
+            background-color: #ff4d4d;
+        }
+        .footer-social a {
+            color: #cccccc;
+            font-size: 18px;
+            margin: 0 10px;
+            transition: color 0.3s;
+        }
+        .footer-social a:hover {
+            color: #ffffff;
+        }
+        .footer hr {
+            border-color: #444;
+        }
+ </style>
 </head>
 
 <body>
@@ -87,7 +102,63 @@
     <?php include 'includes/menu.php';?>
 
     <!-- footer Section Starts Here -->
-    <?php include 'includes/footer.html';?>
+    
+
+    <!-- Footer Section Starts Here -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <!-- Logo and Description -->
+                <div class="col-lg-4 col-md-6 footer-logo">
+                    <a href="index.php"><img src="https://img.freepik.com/free-vector/kombucha-logo-design-template_23-2150047440.jpg" alt="Juice Logo" class="footer-logo-img"></a>
+                    <p>Refreshing and nutritious fruit juices made from the finest ingredients. Taste the freshness in every sip!</p>
+                </div>
+
+                <!-- Quick Links -->
+                <div class="col-lg-2 col-md-6 footer-links">
+                    <h5>Quick Links</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Our Juices</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+
+                <!-- Contact Info -->
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h5>Contact Us</h5>
+                    <p><i class="fas fa-map-marker-alt"></i> 123 Juice St, Fresh City, Fruitania</p>
+                    <p><i class="fas fa-phone-alt"></i> +1 (123) 456-7890</p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:support@fruitjuice.com">support@fruitjuice.com</a></p>
+                </div>
+
+                <!-- Newsletter Subscription -->
+                <div class="col-lg-3 col-md-6 footer-subscribe">
+                    <h5>Subscribe</h5>
+                    <p>Get the latest updates and offers on our juices.</p>
+                    <form action="#" method="POST" class="subscribe-form">
+                        <input type="email" name="email" placeholder="Your email" required>
+                        <button type="submit" class="btn-subscribe">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+
+            <hr>
+
+            <!-- Social Media Links -->
+            <div class="footer-social text-center">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+
+            <!-- Copyright -->
+            <p class="text-center mt-3">© 2024 Fruit Juice Co. All rights reserved. Designed by FruitJuiceDesign.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
